# Procesador-de-TXT-a-Excel-con-FastAPI-MVC

./: .dockerignore  .gitignore  Dockerfile  NOTES  README.md  compose.yaml  main.py  procesador.py  pyproject.toml  readme.md  start.sh
app/controller/: file_controller.py
app/services/: file_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
static/: style.css
templates/: index.html
