[tool.poetry]
name = "procesador-txt-excel"
version = "0.1.0"
description = "App FastAPI que convierte archivos .txt a Excel"
authors = ["Sebas Vásquez <tucorreo@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.34.2"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
jinja2 = "^3.1.3"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
watchfiles = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"